# simplig

./: README.md  pyproject.toml
simplig/: __init__.py  simplig.py
src/simplig/: __init__.py
src/simplig/analysis/: __init__.py  saxs.py
src/simplig/data/: DescribedField.py  FieldMetaData.py  OpenPMDDataLoader.py  __init__.py  rotate.py
src/simplig/plot/: __init__.py  plot_field.py
