[project]
name = "simplig"
version = "0.0.1"
description = ""
authors = [{name = "Paweł Ordyna", email = "p.ordyna@hzdr.de"}]
readme = "README.md"

dependencies=[
    "pint >= 0.22",
    "numpy",
    "matplotlib",
    "scipy",
    "openpmd-api>=0.14",
    "mpi4py",
    "numba",
    "tqdm"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.docformatter]
recursive = true
pre-summary-space = true
wrap-summaries = 100
wrap-descriptions = 100
